--- a/Clay/Views/Shared/_Layout.cshtml
+++ b/Clay/Views/Shared/_Layout.cshtml
@@ -16,7 +16,15 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     @Scripts.Render("~/Scripts/orientation.change.event.jqm.js")
+    @*@Scripts.Render("~/Content/all.css")*@
     <meta name="description" content="Way to pick what you want" />
+    @*<style type="text/css">
+        body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td {
+            padding: 0;
+            margin: 0;
+        }
+    </style>*@
+
 </head>
 <body>
     <div id="container" class="sidebar-closed">
